# models

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  debug.ipynb  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.ipynb  test_config.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-push-app-gar.yaml  build-and-push-app-ghcr.yaml  build-and-push-app.yaml  docs.yaml  multiplatform-unittests.yaml  pre-commit.yaml  python-publish.yaml  tests.yaml  unittests.yaml  update_requirements.yaml
configs/: README.md  ace_config.yaml  advanced_det_seg.yaml  bisenetv1.yaml  classification.yaml  classification_model.yaml  coco_example.yaml  coco_model.yaml  coco_test.yaml  config.yaml  detection.yaml  detection2.yaml  detection_model.yaml  example_export.yaml  example_tuning.yaml  fiftyone.yaml  keypoint_bbox_model.yaml  sample.yaml  sample_keypoint.yaml  sample_seg.yaml  segmentation_model.yaml  simple_class.yaml  simple_det.yaml  simple_keypoint.yaml  simple_seg.yaml  simple_tuner.yaml  test_config.yaml  yolo_seg.yaml  yolov6.yaml  yolov6_export.yaml
configs/db/: config_all.yaml  yolov6-n.yaml  yolov6-s.yaml  yolov6-t.yaml
configs/schemas/: config_schema_export.json  config_schema_full.json  config_schema_train.json  config_schema_tune.json  schema_assumptions.txt  test_schema.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
dockerfiles/: Dockerfile.gpu  Dockerfile.no_gpu
examples/: CIFAR_10_dataset.ipynb  COCO_people_dataset.ipynb  COCO_poeple_subset.ipynb
luxonis_train/: __init__.py  __main__.py
luxonis_train/attached_modules/: __init__.py  base_attached_module.py
luxonis_train/attached_modules/losses/: README.md  __init__.py  adaptive_detection_loss.py  base_loss.py  bce_with_logits.py  cross_entropy.py  implicit_keypoint_bbox_loss.py  keypoint_loss.py  sigmoid_focal_loss.py  smooth_bce_with_logits.py  softmax_focal_loss.py
luxonis_train/attached_modules/metrics/: README.md  __init__.py  base_metric.py  common.py  mean_average_precision.py  mean_average_precision_keypoints.py  object_keypoint_similarity.py
luxonis_train/attached_modules/visualizers/: __init__.py  base_visualizer.py  bbox_visualizer.py  classification_visualizer.py  keypoint_visualizer.py  multi_visualizer.py  segmentation_visualizer.py  utils.py
luxonis_train/callbacks/: README.md  __init__.py  export_on_train_end.py  luxonis_progress_bar.py  metadata_logger.py  module_freezer.py  test_on_train_end.py  upload_checkpoint_on_train_end.py
luxonis_train/core/: __init__.py  core.py  exporter.py  inferer.py  trainer.py  tuner.py
luxonis_train/models/: __init__.py  luxonis_model.py  luxonis_output.py  model.py  model_lightning_module.py
luxonis_train/models/backbones/: README.md  __init__.py  blazepose.py  context_spatial.py  efficient_rep.py  efficientnet.py  micronet.py  mobilenetv2.py  mobileone.py  rep_vgg.py  resnet18.py  rexnetv1.py
luxonis_train/models/heads/: README.md  __init__.py  bisenet_head.py  classification_head.py  effide_head.py  ikeypoint_head.py  multilabel_classification_head.py  segmentation_head.py  yolov6_head.py  yolov7pose_head.py
luxonis_train/models/modules/: common.py
luxonis_train/models/necks/: README.md  __init__.py  reppan_neck.py
luxonis_train/models/predefined_models/: README.md  __init__.py  base_predefined_model.py  classification_model.py  detection_model.py  keypoint_detection_model.py  segmentation_model.py
luxonis_train/nodes/: base_node.py  bisenet_head.py  classification_head.py  contextspatial.py  efficient_bbox_head.py  efficientnet.py  efficientrep.py  implicit_keypoint_bbox_head.py  micronet.py  mobilenetv2.py  mobileone.py  reppan_neck.py  repvgg.py  resnet18.py  rexnetv1.py  segmentation_head.py  yolo_nas_backbone.py  yolo_nas_neck.py  yolo_nas_pose_head.py
luxonis_train/nodes/activations/: activations.py
luxonis_train/nodes/blocks/: __init__.py  (+2 more)
luxonis_train/tools/: test_dataset.py
luxonis_train/utils/: augmentations.py  boxutils.py  callbacks.py  config.py  general.py  head_type.py  head_utils.py  nas_utils.py  optimizers.py  registry.py  schedulers.py  tracker.py  types.py  visualization.py
schemas/: config_schema_export.json  config_schema_full.json  config_schema_train.json  config_schema_tune.json  test_schema.py
src/luxonis_train/: __init__.py  __main__.py
src/tests/: backbone_tests.py  config_tests.py  head_tests.py  neck_tests.py  test_config.yaml  test_config_fail.yaml
tests/: config_tests.py  test_config.yaml  test_config_fail.yaml
tests/empty_dataset/: metadata.parquet
tests/integration/: conftest.py  test_sanity.py
tests/unittests/: __init__.py
tools/: autogenerate_requirements.py  export.py  gen-docs.py  infer.py  main.py  store_config.py  test_config.py  test_dataset.py  train.py  tune.py
(+242 files in other folders)
