[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "luxonis-train"
version = "0.0.1"
description = "Luxonis training library for training lightweight models that run fast on OAK products."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/luxonis/models"
keywords = ["ml", "training", "luxonis", "oak"]
author = "Luxonis"
author_email = "support@luxonis.com"
license = "Apache License 2.0"
classifiers = [
    "License :: Apache License 2.0",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.8",
]
[metadata.project_urls]
# TODO: update before release
"Bug Tracker" = "https://github.com/luxonis/models/issues"
"Source Code" = "https://github.com/luxonis/models/tree/dev"

[options]
packages = { find = { where = "src" } }
package_dir = ["", "src"]
include_package_data = true

[options.extras_require]
export = [
    "blobconverter>=1.3.0"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["F403", "B028", "B905", "D1"]
select = ["E4", "E7", "E9", "F", "W", "B", "I"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
black = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
