[project]
name = "luxonis-train"
version = "0.1.0"
description = "Luxonis training framework for seamless training of various neural networks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
maintainers = [
    { name = "Luxonis", email = "support@luxonis.com" },
]
keywords = ["ml", "training", "luxonis", "oak"]
classifiers = [
    "License :: Apache License 2.0",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "luxonis-ml[all] @ git+https://github.com/luxonis/luxonis-ml.git@fa06d90",
    "pycocotools>=2.0.7",
    "pytorch-lightning>=2.0.0",
    "rich>=13.0.0",
    "s3fs>=2023.0.0",
    "tensorboard>=2.10.1",
    "torchvision>=0.16.0",

    "blobconverter>=1.4.2",
    "onnx>=1.12.0",
    "onnxruntime>=1.13.1",
    "onnxsim>=0.4.10",

    "optuna>=3.2.0",
    "psycopg2-binary>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "luxonis-train",
    "pre-commit>=3.2.1",
    "pytest-cov>=4.1.0",
    "toml>=0.10.2",
    "gdown>=4.2.0",
]

[project.urls]
repository = "https://github.com/luxonis/models"
issues = "https://github.com/luxonis/models/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["F403", "B028", "B905", "D1", "W191"]
select = ["E4", "E7", "E9", "F", "W", "B", "I"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
black = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
