[project]
name = "luxonis-train"
version = "0.1.0"
description = "Luxonis training framework for seamless training of various neural networks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Luxonis", email = "support@luxonis.com" }]
maintainers = [{ name = "Luxonis", email = "support@luxonis.com" }]
keywords = ["ml", "training", "luxonis", "oak"]
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.scripts]
luxonis_train = "tools.main:main"

[project.urls]
repository = "https://github.com/luxonis/models"
issues = "https://github.com/luxonis/models/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["F403", "B028", "B905", "D1", "W191"]
select = ["E4", "E7", "E9", "F", "W", "B", "I"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
black = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
